# render-metadata

./: Dockerfile  README.md  docker-compose.yml
.github/scripts/: wait-cassandra.sh
.github/workflows/: validate-model.yml
database/: __init__.py  __main__.py  pyproject.toml  requirements.txt  service.py
database/api/: startSession.py  write.py
database/model/: cassandra.py
render/: __init__.py  __main__.py  pyproject.toml  service.py
render/api/: render.py  shot.py
render/model/: frame.py  renderer.py  shot.py
renderer/: __init__.py  __main__.py  service.py
renderer/api/: render.py
renderer/model/: renderer.py  shot.py
tests/: README.md
tests/api/: test_render.py  test_shot.py  test_write.py
tests/model/: test_cassandra.py  test_frame.py  test_renderer.py  test_shot.py
