
[project]
name = "database"
description = "Just a service playground for a database"
license = {file = "../LICENSE"}
readme = "../README.md"
version = "0.1.0"
dependencies = [
    "cassandra-driver",
    "flask"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["database"]
