
[project]
name = "render"
description = "Just a service playground for simulating rendering metadata"
license = {file = "../LICENSE"}
readme = "../README.md"
version = "0.1.0"
dependencies = [
    "flask"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["render"]
